cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(cpp_practice)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
find_package(GTest REQUIRED)
include(CTest)
enable_testing()
add_subdirectory(fibonacci)
add_subdirectory(bit_counter)
add_subdirectory(cracking_the_coding_interview)

